[package]
name = "process_path"
version = "0.1.2"
authors = ["Wesley Wiser <wwiser@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/wesleywiser/process_path"
documentation = "https://docs.rs/process_path"
readme = "README.md"
description = "A Rust library to get the path of the currently executing process."
keywords = ["current", "process", "executable"]

[target.'cfg(windows)'.dependencies]
winapi = "0.2"
kernel32-sys = "0.2"

[target.'cfg(any(target_os="freebsd", target_os="dragonfly", target_os="netbsd", target_os="macos"))'.dependencies]
libc = "0.2"
